# ptune-task

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  esbuild.config.mjs  eslint.config.js  jest.config.cjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
archived/ptune-sync-skel/: .gitignore  pyproject.toml  status.json
archived/ptune-sync-skel/_journal/: 2026-03-07.md
archived/ptune-sync-skel/docs/: cli-arguments.md  cli-contract.md  task-json-schema.md
archived/ptune-sync-skel/sample/: 2026-02-13.json  diff.json  event.md  export.md
archived/ptune-sync-skel/scripts/: regist_uri_entry.ps1
archived/ptune-sync-skel/src/ptune_sync/: config.py  logging_config.py
archived/ptune-sync-skel/src/ptune_sync/application/: auth_usecase.py
archived/ptune-sync-skel/src/ptune_sync/auth/: local_server.py  oauth_flow.py  oauth_pkce.py  token_repository.py  token_service.py  token_store.py
archived/ptune-sync-skel/src/ptune_sync/cli/: main.py
archived/ptune-sync-skel/src/ptune_sync/core/: constants.py  exceptions.py  payload_reader.py  response.py  stdin_reader.py
archived/ptune-sync-skel/src/ptune_sync/domain/: my_task.py  sync_history.py  task_history.py  task_list.py  versioning.py
archived/ptune-sync-skel/src/ptune_sync/repositories/: sync_histories_repository.py  task_histories_repository.py  tasks_repository.py
archived/ptune-sync-skel/src/ptune_sync/uri/: cli_dispatcher.py  (+2 more)
archived/ptune-sync-skel/src/ptune_sync_skel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+877 files in other folders)
